fixing resources service
