# web/router/router.go
@@ -12,8 +12,8 @@ import (
 	"github.com/agent-auth/agent-auth-api/pkg/authz"
 	_ "github.com/agent-auth/agent-auth-api/web/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/agent-auth/agent-auth-api/web/services/health"
-	"github.com/agent-auth/agent-auth-api/web/services/oauth"
 	"github.com/agent-auth/agent-auth-api/web/services/projects"
+	"github.com/agent-auth/agent-auth-api/web/services/resources"
 	"github.com/agent-auth/agent-auth-api/web/services/roles_permissions"
 	"github.com/agent-auth/agent-auth-api/web/services/workspaces"
 	"github.com/go-chi/chi"
@@ -21,7 +21,7 @@ import (
 
 type router struct {
 	health           health.Health
-	resourceService  oauth.ResourceService
+	resourceService  resources.ResourceService
 	tokenProvider    authz.TokenProvider
 	workspaceService workspaces.WorkspaceService
 	rolesService     roles_permissions.RolesService
@@ -56,23 +56,13 @@ func NewRouter() Router {
 		}
 	}
 
-	svc, err := oauth.NewResourceService(
-		requiredEnvVars["KEYCLOAK_URL"],
-		requiredEnvVars["KEYCLOAK_TOKEN"],
-	)
-	if err != nil {
-		panic(fmt.Sprintf("failed to create resource service: %v", err))
-	}
-
-	workspaceSvc := workspaces.NewWorkspaceService()
-
 	return &router{
 		health:          health.NewHealth(),
-		resourceService: svc,
+		resourceService: resources.NewResourceService(),
 		tokenProvider: *authz.NewTokenProvider(
 			requiredEnvVars["API_AUTH_JWKS_URL"],
 		),
-		workspaceService: workspaceSvc,
+		workspaceService: workspaces.NewWorkspaceService(),
 		rolesService:     roles_permissions.NewRolesService(),
 		projectService:   projects.NewProjectService(),
 	}
@@ -144,37 +134,12 @@ func (router *router) Router(enableCORS bool) *chi.Mux {
 		})
 	})
 
-	// Path for all OAuth resource operations
-	protected.Route("/projects/{project_id}/resources", func(r chi.Router) {
-		// System Admin routes
-
-		// Workspace Admin routes
-		r.With(authz.RequireRoles(authz.WorkspaceAdmin, authz.SystemAdmin, authz.AppAdmin, authz.AppDeveloper)).
-			Group(func(r chi.Router) {
-				r.Post("/", router.resourceService.Create)
-				r.Put("/{resource_id}", router.resourceService.Update)
-				r.Delete("/{resource_id}", router.resourceService.Delete)
-			})
-
-		// Viewer routes (and above)
-		r.With(authz.RequireRoles(
-			authz.AppViewer,
-			authz.AppDeveloper,
-			authz.AppAdmin,
-			authz.WorkspaceAdmin,
-			authz.SystemAdmin,
-		)).Group(func(r chi.Router) {
-			r.Get("/", router.resourceService.List)
-			r.Get("/{resource_id}", router.resourceService.Get)
-		})
-	})
-
 	// Add roles and permissions routes
 	protected.Route("/projects/{project_id}/roles", func(r chi.Router) {
 		r.With(authz.RequireRoles(authz.WorkspaceAdmin, authz.SystemAdmin, authz.AppAdmin, authz.AppDeveloper)).
 			Group(func(r chi.Router) {
 				r.Post("/", router.rolesService.CreateRole)
-				r.Get("/", router.rolesService.GetRolesByProject)
+				r.Delete("/", router.rolesService.DeleteRolesByProject)
 				r.Delete("/{role_id}", router.rolesService.DeleteRole)
 			})
 
@@ -184,11 +149,37 @@ func (router *router) Router(enableCORS bool) *chi.Mux {
 				r.Delete("/{role_id}/permissions", router.rolesService.RemovePermission)
 			})
 
+		r.With(authz.RequireRoles(
+			authz.WorkspaceAdmin,
+			authz.SystemAdmin,
+			authz.AppAdmin,
+			authz.AppDeveloper,
+			authz.AppViewer,
+		)).Group(func(r chi.Router) {
+			r.Get("/", router.rolesService.GetRolesByProject)
+			r.Get("/{role_id}", router.rolesService.GetRole)
+		})
+	})
+
+	// Path for all resource operations
+	protected.Route("/projects/{project_id}/resources", func(r chi.Router) {
 		r.With(authz.RequireRoles(authz.WorkspaceAdmin, authz.SystemAdmin, authz.AppAdmin, authz.AppDeveloper)).
 			Group(func(r chi.Router) {
-				r.Get("/", router.rolesService.GetRolesByProject)
-				r.Get("/{role_id}", router.rolesService.GetRole)
+				r.Post("/", router.resourceService.Create)
+				r.Put("/{resource_id}", router.resourceService.Update)
+				r.Delete("/{resource_id}", router.resourceService.Delete)
 			})
+
+		r.With(authz.RequireRoles(
+			authz.WorkspaceAdmin,
+			authz.SystemAdmin,
+			authz.AppAdmin,
+			authz.AppDeveloper,
+			authz.AppViewer,
+		)).Group(func(r chi.Router) {
+			r.Get("/", router.resourceService.ListByProject)
+			r.Get("/{resource_id}", router.resourceService.Get)
+		})
 	})
 
 	// Scoped routes can be added similarly if needed
